<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/bkgndColour">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_default_text"
        android:id="@+id/priceLabel"
        android:textSize="45sp"
        android:textStyle="bold"
        android:textColor="@color/fontColour"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logoImage"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/imageview_desc"
        android:src="@drawable/bitcoin_image"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/priceLabel"
        android:gravity="center_vertical|center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/base"
            android:textSize="30sp"
            android:textStyle="bold"
            android:id="@+id/textView"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/currency_spinner"
            android:gravity="center_horizontal"
            android:spinnerMode="dropdown"
            android:dropDownSelector="@color/fontColour"
            />


    </LinearLayout>

    <Button
        android:id="@+id/buttonVpred"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/logoImage"
        android:background="@color/bkgndColour"
        android:text="@string/presunVpred"
        android:textAlignment="textEnd"
        android:gravity="end"
        android:textColor="@color/fontColour"
        android:textSize="30sp"
        android:textStyle="bold" />

</RelativeLayout>
